Latest fetcher code added